# Gb_python

./: Makefile  README.md  pyproject.toml
gb/scripts/: 10.py  lesson_five.py  lesson_four.py  lesson_one.py  lesson_seven.py  lesson_six.py  lesson_three.py  lesson_two.py
gb/scripts/lesson_8/: controller.py  view.py
tests/: test_lesson_one.py  test_lesson_three.py
