[tool.poetry]
name = "gb-python"
version = "0.1.0"
description = ""
authors = ["SashaTolkodubova <atolkodubova@gmail.com>"]
readme = "README.md"
packages = [{include = "gb"}]

[tool.poetry.dependencies]
python = "^3.11"
flake8 = "^6.0.0"
pandas = "^2.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gb = 'gb.scripts.main:main'